[tool.poetry]
name = "ankitai"
version = "0.1.0"
description = "An AI Agent with multiple skills including twitter handling"
authors = ["Ankit Das <ecryptoguru@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
cdp-langchain = "^0.0.6"
cdp-agentkit-core = "^0.0.4"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
langgraph = "^0.2.45"
pydantic = "^2.9.2"
cdp-sdk = "^0.10.0"
twitter-langchain = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
